--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             const password = document.getElementById('password').value;
             const correctPassword = "Quiz2024apsJ#htfmL56";
             if (password === correctPassword) {
-                window.location.href = "choix-quizz.html";
+                window.location.href = "choix-quizz.html"; // Assure-toi que ce fichier existe
             } else {
                 alert("Mot de passe incorrect. Veuillez réessayer.");
             }
